# CrystalClock

./: .gitattributes  .gitignore  CMakeLists.txt  CrystalClock.data  CrystalClock.js  CrystalClock.wasm  LICENSE  README.MD  cmdparser.cpp  cmdparser.h  config.cpp  crystalclock.cpp  index.html  styles.css  timeinfo.cpp  timeinfo.h
android/CrystalClock/: settings.gradle.kts
android/CrystalClock/app/: build.gradle.kts
android/CrystalClock/app/release/: output-metadata.json
android/CrystalClock/app/src/main/: AndroidManifest.xml
android/CrystalClock/app/src/main/assets/resources/shaders/: fxaa.fs
android/CrystalClock/app/src/main/assets/resources/shaders/glsl100/: crystal.vs  tunnel.fs  tunnel.vs
android/CrystalClock/app/src/main/assets/resources/shaders/glsl330/: tunnel.fs  tunnel.vs
android/CrystalClock/app/src/main/cpp/: CMakeLists.txt  android_native.h  egl_helper.h  main.cpp
android/CrystalClock/app/src/main/java/com/rrtry/crystalclock/: ClockActivity.java  ClockApplication.java  RLWallpaperService.java
android/CrystalClock/app/src/main/res/values/: strings.xml
android/CrystalClock/app/src/main/res/xml/: livewallpaper.xml
android/CrystalClock/gradle/: libs.versions.toml
android/CrystalClock/gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt
resources/: config.ini
resources/shaders/: crystal.fs  orb.vs
resources/shaders/glsl100/: crystal.fs  crystal.vs  orb.fs  tunnel.fs
resources/shaders/glsl330/: crystal.fs  crystal.vs  orb.fs  tunnel.fs
src/: clock.cpp  clock.h  config.cpp  config.h  crystalclock.cpp  emscripten_main.cpp  lumin_main.cpp  main.cpp  timeinfo.h
src/wallpaper/: Main.cpp  RaylibDesktop.cpp  RaylibDesktop.h
